# TopicModelingStreamlit

./: .gitignore  data_lib.py  devenv.nix  devenv.yaml  flake.nix  gensim_lib.py  nlp_utils.py  playwright_test.py  pyproject.toml  topic-modeling-bertopic-streamlit.py  topic-modeling-gensim-streamlit.py
src/topic_modeling_streamlit/: bertopic_app.py  data_lib.py  gensim_app.py  gensim_lib.py  nlp_utils.py  plotting.py  presets.py  transformers_utils.py  utils.py
tests/: conftest.py  test_bertopic_e2e.py  test_bertopic_presets.py  test_data_lib.py  test_nlp_utils.py  test_plotting_label_mapping.py
