[tool.poetry]
name = "topic-modeling-streamlit"
version = "0.1.1"
description = ""
authors = ["Bor Hodošček <dev@bor.space>"]
readme = "README.md"
# packages = [{include = "topic_modeling_streamlit"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.35.0"
fugashi = "^1.2.1"
unidic-lite = "^1.0.8"
pandas = "^2.0.1"
numpy = "^1.24.3"
pyldavis = "^3.4.1"
umap-learn = "^0.5.3"
bertopic = "^0.16"
pyarrow = "^12.0.0"
matplotlib = "^3.7.1"
ipython = "^8.13.2"
stqdm = "^0.0.5"
xxhash = "^3.2.0"
filelock = "^3.12.0"
sudachipy = "^0.6.7"
sudachidict-full = "^20230110"
pysbd = "^0.3.4"
safetensors = "^0.3.1"
polars = "^0.17.15"
rhoknp = "^1.3.0"
cloudpickle = "^2.2.1"
spacy = "^3.6.0"
jaconv = "^0.3.4"
pydantic = "^1.10.9"
numba = "^0.57.1"
hf-transfer = "^0.1.6"
torch = "^2.3.0"
# torch = { version = "^2.3.0+rocm6.0", source = "pytorch-rocm" }
# pytorch_triton_rocm = { version = "^2.3.0", source = "pytorch-rocm" }
einops = "^0.7.0"
scipy = "=1.12" # newer breaks gensim
playwright = "^1.44.0"
tiktoken = "^0.7.0"
openai = "^1.31.0"
datamapplot = "^0.3.0"

[tool.poetry.dependencies.en_core_web_trf]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.7.3/en_core_web_trf-3.7.3-py3-none-any.whl"

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl"

[tool.poetry.dependencies.ja_core_news_sm]
url = "https://github.com/explosion/spacy-models/releases/download/ja_core_news_sm-3.7.0/ja_core_news_sm-3.7.0-py3-none-any.whl"

[tool.poetry.group.test.dependencies]
# playwright = "^1.33.0"
# pytest-playwright = "^0.3.3"
pytest-xdist = "^3.3.1"

# [tool.poetry.group.cpu]
# optional = true
#
# [tool.poetry.group.cpu.dependencies]
# torch = {version = "^2.3.0+cpu", source = "pytorch-cpu"}
# # torchvision = {version = "^0.15.2", source = "pytorch-cpu"}

# [tool.poetry.group.cuda]
# optional = true
#
# [tool.poetry.group.cuda.dependencies]
# # https://download.pytorch.org/whl/torch_stable.html
# # https://download.pytorch.org/whl/nightly/torch_nightly.html
# torch = {version = "2.1.0.dev20230727+cu121", allow-prereleases = true, platform = "linux", source = "pytorch-cuda"}
# pytorch-triton = {version = "2.1.0+9e3e10c5ed", allow-prereleases = true, platform = "linux", source = "pytorch-cuda"}
# # Only used as dependency, but note that torchvision on day X needs (may need) torch from day X-1:
# torchvision = {version = "0.16.0.dev20230727+cu121", allow-prereleases = true, platform = "linux", source = "pytorch-cuda"}
#
# [tool.poetry.group.rocm]
# optional = true
#
# [tool.poetry.group.rocm.dependencies]
# torch = {version = "2.0.1+rocm5.4.2", allow-prereleases = true, platform = "linux", source = "pytorch-rocm"}
# torchvision = {version = "2.0.1+rocm5.4.2", allow-prereleases = true, platform = "linux", source = "pytorch-rocm"}

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/nightly/cu124"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.0"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
